ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2008-12-07 Jochen Manz
	- LANGUAGES:
		* small corrections in german language file

2008-12-07 Daniel Andreca
	- ENGINE:
		* Update script ready for RC7
	- CONFIGS:
		* Configs ready for RC7
	- DOCS
		* Install / update instructions ready for RC7

2008-12-06 Benedikt Heintel
	- LANGUAGES:
		* Updated: German

2008-12-05 Daniel Andreca
	- ENGINE:
		* Fixed #1516: Named, at least for gentoo, is only binding to localhost by default
		* Fixed #1460: /etc/cron.d/ispcp replacements not happening in gentoo install
	- DISTS:
		* Update Gentoo install documentation
	- CONFIGS:
		* Update Gentoo fcgid setting
		* Update Gentoo ispcp.conf setting
	- LANGUAGES:
		* Updated all languages files
		* Add po file for portuguese_portugal. Update portuguese_portugal language

2008-12-04 Daniel Andreca
	- TOOLS
		* Fixed #1572: squirrelmail needs a update

2008-12-03 Daniel Andreca
	- ENGINE
		* Fixed #1571: Alias Domains: Awstats (static awstats)

		* Moved default statistics group to critical updated (need to perform an engine request)

2008-12-02 Daniel Andreca
	- GUI:
		* Add support for alias subdomain mail
		* Alias subdomains are not counted
		* Hide alias domain list when no alias exists
	- ENGINE
		* Fixed #1518: Virtual mail problem
		* Alias subdomain are not deleted when alais is deleted in same operation

2008-12-01 Benedikt Heintel
	- ENGINE:
		* Fixed #1540: auto-reply: wrong character encoding

2008-11-28 Daniel Andreca
	- GUI:
		* Add default user with password to statistics
		* Fix regresion introduced on r1408
	- TEMPLATES
		* On protected_user_manage.php the size of the edit-icon (edit.png) is 18 pixels instead of 16

2008-11-27 Daniel Andreca
	- LANGUAGES:
		* Fixed #1568: Translations have to be updated because of changed URLs

2008-11-27 Benedikt Heintel
	- DISTS:
		* Fixed: (Fedora) rkhunter and chkrootkit getting not installed

2008-11-27 Daniel Andreca
	- ENGINE:
		* Fixed #837: AWStats password protection
